--- a/feign-consumer/feign-consumer.properties
+++ b/feign-consumer/feign-consumer.properties
@@ -1,2 +1,25 @@
-from=git-default-1.0
-hello=hello-config-center
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka
+
+#Ribbon
+ribbon.ConnectTimeout=500
+ribbon.ReadTimeout=5000
+
+#Ribbon超时，Ribbon超时设置一定要小于Hystrix 超时时间，否则会被熔断或者降级
+USER-SERVICE.ribbon.ConnectTimeout=500
+USER-SERVICE.ribbon.ReadTimeout=5000
+USER-SERVICE.ribbon.OkToRetryOnAllOperations=true
+#访问失败时更换实例次数
+USER_SERVICE.ribbon.MaxAutoRetiesNextServer=2
+#尝试访问首选实例次数
+USER_SERVICE.ribbon.MaxAutoReties=1
+
+#Hystrix
+#Feign Hystrix 开关
+feign.hystrix.enabled=true
+#Feign Hystrix 超时开关
+hystrix.command.default.execution.timeout.enabled=true
+#Feign Hystrix 超时时长
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+
+#日志
+logging.level.com.marco.feign.consumer.service.UserService=DEBUG
