--- a/feign-consumer/feign-consumer.properties
+++ b/feign-consumer/feign-consumer.properties
@@ -23,3 +23,5 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
 #日志
 logging.level.com.marco.feign.consumer.service.UserService=DEBUG
+#测试用值
+hello=hello-config-center
